tests/ui/type-alias-impl-trait/issue-63263-closure-return-fail.none.stderr
error[E0308]: mismatched types
  --> $DIR/issue-63263-closure-return-fail.rs:10:21
   |
LL | pub type Closure = impl FnOnce();
   |                    ------------- the expected opaque type
...
LL |     || -> Closure { || () };
   |                     ^^^^^ expected opaque type, found closure
   |
   = note: expected opaque type `Closure`
                  found closure `[closure@$DIR/issue-63263-closure-return-fail.rs:10:21: 10:23]`
note: this item cannot register hidden type without a `#[defines(Closure)]` attribute
  --> $DIR/issue-63263-closure-return-fail.rs:10:5
   |
LL |     || -> Closure { || () };
   |     ^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
